--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@hello-pangea/dnd": "^17.0.0",
     "axios": "^1.7.9",
     "framer-motion": "^11.14.4",
     "next-themes": "^0.4.4",
